tdf#165846 - Ensure degrees of freedom (nu value) is greater than 0

Change-Id: I900d0b5436bc9417e4f91eac1434c8ae79bd70a1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190988
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
Tested-by: Jenkins
(cherry picked from commit dedaf2a87bca8b903fc42f441c7185921cf03312)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191048
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>